# cw_5_potemkin_da

./: DBManager.py  README.md  database.ini  main.py  pyproject.toml  utils.py
