[tool.poetry]
name = "cw-5-potemkin-da"
version = "0.1.0"
description = ""
authors = ["AmeliPulen <139628158+AmeliPulen@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "cw_5_potemkin_da"}]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "^2.9.9"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
